modify react router setting.

--- a/frontend/src/assets/scss/index.scss
+++ b/frontend/src/assets/scss/index.scss
@@ -1,5 +1,6 @@
 /* components */
 // global
+@import './components/_global/GlobalBackToPageTopButton.scss';
 @import './components/_global/GlobalFooter.scss';
 @import './components/_global/GlobalHeader.scss';
 
