--- a/frontend/src/assets/scss/components/parts/list/PartsStickyNoteList.scss
+++ b/frontend/src/assets/scss/components/parts/list/PartsStickyNoteList.scss
@@ -1,4 +1,4 @@
-@import '../../../util/colors.scss';
+@import '../../../_variables.scss';
 
 $parts-sticky-note-list-default-border-left-color: #2d8fdd;
 $parts-sticky-note-list-default-background-color: #f1f8ff;
