--- a/frontend/src/assets/scss/components/parts/button/PartsCircleButton.scss
+++ b/frontend/src/assets/scss/components/parts/button/PartsCircleButton.scss
@@ -1,4 +1,4 @@
-@import '../../../util/colors.scss';
+@import '../../../_variables.scss';
 
 $parts-circle-button-default-color: #85fd35;
 $parts-circle-button-default-border-bottom-color: #00d21c;
