--- a/frontend/src/assets/scss/components/parts/button/PartsSimpleButton.scss
+++ b/frontend/src/assets/scss/components/parts/button/PartsSimpleButton.scss
@@ -1,4 +1,4 @@
-@import '../../../util/colors.scss';
+@import '../../../_variables.scss';
 
 $parts-simple-button-default-color: #85fd35;
 $parts-simple-button-default-border-bottom-color: #00d21c;
