--- a/frontend/src/assets/scss/components/parts/list/PartsSimpleList.scss
+++ b/frontend/src/assets/scss/components/parts/list/PartsSimpleList.scss
@@ -1,4 +1,4 @@
-@import '../../../util/colors.scss';
+@import '../../../_variables.scss';
 
 $parts-simple-list-default-background-color: #fcfcfc;
 
