add border-radius class setting.

--- a/frontend/src/assets/scss/_variables.scss
+++ b/frontend/src/assets/scss/_variables.scss
@@ -111,3 +111,9 @@ $basic-color-code: (
   red: rgb(172, 41, 30, 1.0),
   white: rgb(255, 255, 255, 1.0)
 ); */
+
+$border-radius-points: (
+  5p: 5px,
+  8p: 8px,
+  10p: 10px
+);
