modify padding, margin setting.

--- a/frontend/src/assets/scss/_variables.scss
+++ b/frontend/src/assets/scss/_variables.scss
@@ -35,6 +35,15 @@ $layout-points: (
   10: 20px,
 );
 
+$layout-base-points: (
+  1: 4px,
+  2: 8px,
+  3: 12px,
+  4: 16px,
+  5: 20px,
+  6: 24px,
+);
+
 $layout-directions: (
   left: left,
   center: center,
