--- a/frontend/src/assets/scss/util/layout.scss
+++ b/frontend/src/assets/scss/util/layout.scss
@@ -33,6 +33,16 @@
     margin: 0 $point 0 $point;
   }
 
+  // margin-r
+  .mr-#{$name} {
+    margin: 0 $point 0 0 ;
+  }
+
+  // margin-l
+  .ml-#{$name} {
+    margin: 0 0 0 $point;
+  }
+
   // margin-xy
   .mfull-#{$name} {
     margin: $point $point $point $point;
@@ -46,6 +56,16 @@
   // padding-x
   .px-#{$name} {
     padding: 0 $point 0 $point;
+  }
+
+  // padding-r
+  .pr-#{$name} {
+    padding: 0 $point 0 0 ;
+  }
+
+  // padding-l
+  .pl-#{$name} {
+    padding: 0 0 0 $point;
   }
 
   // padding-xy
