add full marign/padding setting.

--- a/frontend/src/assets/scss/util/layout.scss
+++ b/frontend/src/assets/scss/util/layout.scss
@@ -44,7 +44,7 @@
   }
 
   // margin-xy
-  .mfull-#{$name} {
+  .mxy-#{$name} {
     margin: $point $point $point $point;
   }
 
@@ -69,7 +69,7 @@
   }
 
   // padding-xy
-  .pfull-#{$name} {
+  .pxy-#{$name} {
     padding: $point $point $point $point;
   }
 }
