add shimple chip component.

--- a/frontend/src/assets/scss/index.scss
+++ b/frontend/src/assets/scss/index.scss
@@ -15,6 +15,7 @@
 @import './components/parts/button/PartsSimpleButton.scss';
 @import './components/parts/button/PartsSimpleFlatButton.scss';
 @import './components/parts/carousel/PartsSimpleCarousel.scss';
+@import './components/parts/chip/PartsSimpleChip.scss';
 @import './components/parts/form/PartsSimpleSelectBox.scss';
 @import './components/parts/form/PartsSimpleTextField.scss';
 @import './components/parts/heading/PartsLabelHeading.scss';
