--- a/frontend/src/assets/scss/components/parts/chip/PartsSimpleChip.scss
+++ b/frontend/src/assets/scss/components/parts/chip/PartsSimpleChip.scss
@@ -1,19 +1,19 @@
 @import '../../../_variables.scss';
 
-$parts-simple-button-default-color: #85fd35;
-$parts-simple-button-default-border-bottom-color: #00d21c;
+$parts-simple-chip-default-color: rgb(224, 224, 224, 1.0);
+$parts-simple-chip-default-hover-color: rgb(204, 204, 204, 1.0);
 
 .parts-simple-chip {
   display: inline-block;
   // background: #e0e0e0;
-  background: rgb(224, 224, 224, 1.0);
+  background: $parts-simple-chip-default-color;
   padding: 6px 12px;
   border-radius: 32px;
   font-size: 13px;
 
   &:hover {
     // background: #cccccc;
-    background: rgb(204, 204, 204, 1.0);
+    background: $parts-simple-chip-default-hover-color;
     cursor: pointer;
   }
 }
