--- a/frontend/src/assets/scss/components/parts/chip/PartsSimpleChip.scss
+++ b/frontend/src/assets/scss/components/parts/chip/PartsSimpleChip.scss
@@ -9,11 +9,36 @@ $parts-simple-chip-default-hover-color: rgb(204, 204, 204, 1.0);
   background: $parts-simple-chip-default-color;
   padding: 6px 12px;
   border-radius: 32px;
-  font-size: 13px;
+  font-size: 12px;
 
   &:hover {
     // background: #cccccc;
     background: $parts-simple-chip-default-hover-color;
     cursor: pointer;
+  }
+
+  & > .parts-simple-chip__close-chip {
+    display: inline-block;
+    background: #aaa;
+    border: 0;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    padding: 0;
+    margin: 0 -4px 0 4px;
+    cursor: pointer;
+    font: inherit;
+    line-height: 20px;
+
+    &:after {
+      color: $parts-simple-chip-default-color;
+      content: 'x';
+    }
+    &:hover {
+      background: #999999;
+    }
+    &:active {
+      background: #777777;
+    }
   }
 }
