--- a/frontend/src/assets/scss/components/parts/chip/PartsSimpleChip.scss
+++ b/frontend/src/assets/scss/components/parts/chip/PartsSimpleChip.scss
@@ -2,6 +2,9 @@
 
 $parts-simple-chip-default-color: rgb(224, 224, 224, 1.0);
 $parts-simple-chip-default-hover-color: rgb(204, 204, 204, 1.0);
+$parts-simple-chip-close-chip-default-color: rgb(170, 170, 170, 1.0);
+$parts-simple-chip-close-chip-hover-color: rgb(153, 153, 153, 1.0);
+$parts-simple-chip-close-chip-active-color: rgb(119, 119, 119, 1.0);
 
 .parts-simple-chip {
   display: inline-block;
@@ -14,12 +17,13 @@ $parts-simple-chip-default-hover-color: rgb(204, 204, 204, 1.0);
   &:hover {
     // background: #cccccc;
     background: $parts-simple-chip-default-hover-color;
-    cursor: pointer;
+    // cursor: pointer;
   }
 
   & > .parts-simple-chip__close-chip {
     display: inline-block;
-    background: #aaa;
+    // background: #aaaaaa;
+    background: $parts-simple-chip-close-chip-default-color;
     border: 0;
     height: 20px;
     width: 20px;
@@ -27,18 +31,20 @@ $parts-simple-chip-default-hover-color: rgb(204, 204, 204, 1.0);
     padding: 0;
     margin: 0 -4px 0 4px;
     cursor: pointer;
-    font: inherit;
-    line-height: 20px;
+    // font: inherit;
+    // line-height: 20px;
 
     &:after {
       color: $parts-simple-chip-default-color;
       content: 'x';
     }
     &:hover {
-      background: #999999;
+      // background: #999999;
+      background: $parts-simple-chip-close-chip-hover-color;
     }
     &:active {
-      background: #777777;
+      // background: #777777;
+      background: $parts-simple-chip-close-chip-active-color;
     }
   }
 }
