add part text chip box.

--- a/frontend/src/assets/scss/index.scss
+++ b/frontend/src/assets/scss/index.scss
@@ -18,6 +18,7 @@
 @import './components/parts/chip/PartsSimpleChip.scss';
 @import './components/parts/form/PartsSimpleSelectBox.scss';
 @import './components/parts/form/PartsSimpleTextField.scss';
+@import './components/parts/form/PartsTextChipBox.scss';
 @import './components/parts/heading/PartsLabelHeading.scss';
 @import './components/parts/heading/PartsSimpleHeading.scss';
 @import './components/parts/list/PartsSimpleList.scss';
