modify to width: 100%; to input tag.

--- a/frontend/src/assets/scss/components/parts/form/PartsTextChipBox.scss
+++ b/frontend/src/assets/scss/components/parts/form/PartsTextChipBox.scss
@@ -28,8 +28,7 @@ $parts-simple-button-default-border-bottom-color: #00d21c;
   }
 
   input {
-    // width: 100%;
-    width: auto;
+    width: 100%;
     padding: 10px 15px;
     font-size: 16px;
     border: none;
