--- a/frontend/src/assets/scss/components/parts/chip/PartsSimpleChip.scss
+++ b/frontend/src/assets/scss/components/parts/chip/PartsSimpleChip.scss
@@ -20,10 +20,6 @@ $parts-simple-chip-close-chip-active-color: rgb(119, 119, 119, 1.0);
     // cursor: pointer;
   }
 
-  &__small {
-    padding: 3px 6px;
-  }
-
   & > .parts-simple-chip__close-chip {
     display: inline-block;
     // background: #aaaaaa;
@@ -49,6 +45,38 @@ $parts-simple-chip-close-chip-active-color: rgb(119, 119, 119, 1.0);
     &:active {
       // background: #777777;
       background: $parts-simple-chip-close-chip-active-color;
+    }
+  }
+
+  &__small {
+    padding: 3px 6px;
+
+    & > .parts-simple-chip__close-chip {
+      display: inline-block;
+      // background: #aaaaaa;
+      background: $parts-simple-chip-close-chip-default-color;
+      border: 0;
+      height: 16px;
+      width: 16px;
+      border-radius: 50%;
+      padding: 0;
+      margin: 0 -4px 0 4px;
+      cursor: pointer;
+      // font: inherit;
+      // line-height: 20px;
+
+      &:after {
+        color: $parts-simple-chip-default-color;
+        content: 'x';
+      }
+      &:hover {
+        // background: #999999;
+        background: $parts-simple-chip-close-chip-hover-color;
+      }
+      &:active {
+        // background: #777777;
+        background: $parts-simple-chip-close-chip-active-color;
+      }
     }
   }
 }
