--- a/frontend/src/assets/scss/components/parts/form/PartsTextChipBox.scss
+++ b/frontend/src/assets/scss/components/parts/form/PartsTextChipBox.scss
@@ -29,6 +29,7 @@ $parts-simple-button-default-border-bottom-color: #00d21c;
 
   input {
     width: auto;
+    flex-grow: 2;
     padding: 2px 8px;
     font-size: 16px;
     border: none;
