--- a/frontend/src/assets/scss/components/parts/menu/PartsSimpleMenu.scss
+++ b/frontend/src/assets/scss/components/parts/menu/PartsSimpleMenu.scss
@@ -42,11 +42,14 @@ $parts-simple-button-default-border-bottom-color: #00d21c;
     padding: 4px 8px;
     text-align: left;
 
-    &:hover {
-      // background-color:rgb(0, 0, 0, 0.42);
-      background-color:$util-color-light-blue;
-      border-radius: 2px;
-      cursor: pointer;
+    // 特定のクラスが設定されている場合は除外
+    &:not(&.parts-simple-menu__item--selected) {
+      &:hover {
+        // background-color:rgb(0, 0, 0, 0.42);
+        background-color:$util-color-light-blue;
+        border-radius: 2px;
+        cursor: pointer;
+      }
     }
   }
 
@@ -59,6 +62,14 @@ $parts-simple-button-default-border-bottom-color: #00d21c;
       background-color:$util-color-light-blue;
       border-radius: 2px;
       cursor: pointer;
+    }
+  }
+
+  &__item {
+    &--selected {
+      background-color: $util-color-light-blue;
+      border-radius: 2px;
+      cursor: not-allowed;
     }
   }
 }
