add toast component.

--- a/frontend/src/assets/scss/index.scss
+++ b/frontend/src/assets/scss/index.scss
@@ -28,6 +28,7 @@
 @import './components/parts/table/PartsLabelTable.scss';
 @import './components/parts/table/PartsSimpleTable.scss';
 @import './components/parts/table/PartsSimpleEditTable.scss';
+@import './components/parts/toast/PartsSimpleToast.scss';
 
 
 /* plugins */
