add $layout-width-points variable setting.

--- a/frontend/src/assets/scss/util/layout.scss
+++ b/frontend/src/assets/scss/util/layout.scss
@@ -74,6 +74,12 @@
   }
 }
 
+@each $name, $point in $layout-width-points {
+  .width-#{$name} {
+    width: $point;
+  }
+}
+
 .d-flex {
   display: flex;
 }
