--- a/frontend/src/assets/scss/_variables.scss
+++ b/frontend/src/assets/scss/_variables.scss
@@ -44,6 +44,19 @@ $layout-base-points: (
   6: 24px,
 );
 
+$layout-width-points: (
+  1: 10%,
+  2: 20%,
+  3: 30%,
+  4: 40%,
+  5: 50%,
+  6: 60%,
+  7: 70%,
+  8: 80%,
+  9: 90%,
+  10: 100%,
+);
+
 $layout-directions: (
   left: left,
   center: center,
