add text-align setting.

--- a/frontend/src/assets/scss/util/layout.scss
+++ b/frontend/src/assets/scss/util/layout.scss
@@ -89,6 +89,10 @@
   .flex-justify-#{$name} {
     justify-content: $direction;
   }
+
+  .text-#{$name} {
+    text-align: $direction;
+  }
 }
 
 @each $name, $direction in $layout-align-directions {
