add liner loading component.

--- a/frontend/src/assets/scss/index.scss
+++ b/frontend/src/assets/scss/index.scss
@@ -8,6 +8,7 @@
 @import './components/parts/PartsCircleLoading.scss';
 @import './components/parts/PartsLabelHeader.scss';
 @import './components/parts/PartsContentsBoard.scss';
+@import './components/parts/PartsLinerLoading.scss';
 @import './components/parts/PartsMessageBoard.scss';
 @import './components/parts/box/PartsSimpleBox.scss';
 @import './components/parts/box/PartsTitleBox.scss';
