add bar loading setting.

--- a/frontend/src/assets/scss/components/parts/PartsLinerLoading.scss
+++ b/frontend/src/assets/scss/components/parts/PartsLinerLoading.scss
@@ -1,9 +1,20 @@
 .parts-liner-loading {
+  position: relative;
   &__line {
     display: inline-block;
-    width: 15px;
-    height: 15px;
+    width: 12px;
+    height: 12px;
     border-radius: 15px;
+    background-color: #4b9cdb;
+  }
+
+  &__bar {
+    position: absolute;
+
+    float: left;
+    width: 100%;
+    height: 6px;
+    border-radius: 2px;
     background-color: #4b9cdb;
   }
 
@@ -25,6 +36,10 @@
   }
   .parts-liner-loading__line:nth-last-child(3) {
     animation: linearLoading 0.6s 0.3s linear infinite;
+  }
+
+  .parts-liner-loading__bar {
+    animation: barLoading 2s cubic-bezier(0.17, 0.37, 0.43, 0.67) infinite;
   }
 
   @keyframes linearLoadingSample {
@@ -50,4 +65,19 @@
       transform: translate(0, 0);
     }
   }
+
+  @keyframes barLoading {
+    0%,
+    100% {
+      transform: translate(0, 0);
+    }
+
+    50% {
+      transform: translate(80px, 0);
+      // background-color: #f5634a;
+      background-color: $util-color-blue;
+      width: 25px;
+    }
+  }
+
 }
