create liner loadinf wrapper.

--- a/frontend/src/assets/scss/index.scss
+++ b/frontend/src/assets/scss/index.scss
@@ -25,6 +25,7 @@
 @import './components/parts/list/PartsStickyNoteList.scss';
 @import './components/parts/loading/PartsCircleLoading.scss';
 @import './components/parts/loading/PartsLinerLoading.scss';
+@import './components/parts/loading/PartsLinerLoadingWrapper.scss';
 @import './components/parts/menu/PartsSimpleMenu.scss';
 @import './components/parts/modal/PartsSimpleModal.scss';
 @import './components/parts/table/PartsLabelTable.scss';
