modify warapper css.

--- a/frontend/src/assets/scss/components/parts/loading/PartsLinerLoadingWrapper.scss
+++ b/frontend/src/assets/scss/components/parts/loading/PartsLinerLoadingWrapper.scss
@@ -8,4 +8,11 @@
     background-color: #ffffff;
   }
 
+  &__content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #ffffff;
+  }
+
 }
