--- a/frontend/src/assets/scss/components/parts/loading/PartsLinerLoadingWrapper.scss
+++ b/frontend/src/assets/scss/components/parts/loading/PartsLinerLoadingWrapper.scss
@@ -1,18 +1,19 @@
 .parts-liner-loading-wrapper {
-  position: relative;
-
-  &__contest {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: #ffffff;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  // background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgb(240, 240, 240, 1.0);
+  pointer-events: auto;
+  transition: 0.3s linear;
 
   &__content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: #ffffff;
+    position: fixed;
+    top: 50%;
+    left: 50%;
   }
 
 }
