--- a/frontend/src/assets/scss/components/parts/loading/PartsLinerLoadingWrapper.scss
+++ b/frontend/src/assets/scss/components/parts/loading/PartsLinerLoadingWrapper.scss
@@ -12,8 +12,12 @@
 
   &__content {
     position: fixed;
-    top: 50%;
-    left: 50%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    margin: 25% auto 25% auto;
   }
-
 }
