--- a/frontend/src/assets/scss/components/parts/toast/PartsSimpleToast.scss
+++ b/frontend/src/assets/scss/components/parts/toast/PartsSimpleToast.scss
@@ -14,6 +14,7 @@ $parts-simple-button-default-border-bottom-color: #00d21c;
   color: $util-color-white;
   border-radius: 2px;
   transform: translateX(220px);
+  z-index: 1010;
 
   &.parts-simple-toast__status--normal {
     // background-color: #28a746;
